gcc/testsuite/g++.old-deja/g++.brendan/init12.C
// { dg-do assemble  }
// GROUPS passed array-bindings
char * bob();

int main()
{
    char a[1][2];
    a[0] = bob();// { dg-error "" } .*
}
